--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,6 @@ spring:
     enabled: true
     locations: classpath:db/migration
 
+    security:
+      api.security.token.secret="${JWT_SECRET:my-secret-key}"
+
